# backend-api

./: .gitignore  .gitlab-ci.yml  BUILD  Dockerfile  MODULE.bazel  README.md  WORKSPACE  go.mod  secret-data.json
bzl/: google_cloud.bzl  grpc.bzl  prometheus.bzl  protobuf.bzl
cmd/: BUILD.bazel  main.go
config/: BUILD.bazel  config.go  prod
handler/: BUILD.bazel  handler.go
kubernetes/kubernetes/: deployment.yaml  grafana-deployment.yaml  prometheus-config.yaml
patched_prometheus/github.com/prometheus/client_golang/api/: BUILD.bazel
patched_prometheus/github.com/prometheus/client_golang/api/prometheus/v1/: BUILD.bazel
patched_prometheus/github.com/prometheus/client_golang/examples/exemplars/: BUILD.bazel
patched_prometheus/github.com/prometheus/client_golang/examples/gocollector/: BUILD.bazel
patched_prometheus/github.com/prometheus/client_golang/examples/middleware/: BUILD.bazel
patched_prometheus/github.com/prometheus/client_golang/examples/middleware/httpmiddleware/: BUILD.bazel
patched_prometheus/github.com/prometheus/client_golang/examples/random/: BUILD.bazel
patched_prometheus/github.com/prometheus/client_golang/examples/simple/: BUILD.bazel
patched_prometheus/github.com/prometheus/client_golang/examples/versioncollector/: BUILD.bazel
patched_prometheus/github.com/prometheus/client_golang/internal/github.com/golang/gddo/httputil/: BUILD.bazel
patched_prometheus/github.com/prometheus/client_golang/internal/github.com/golang/gddo/httputil/header/: BUILD.bazel
patched_prometheus/github.com/prometheus/client_golang/prometheus/: BUILD.bazel
patched_prometheus/github.com/prometheus/client_golang/prometheus/collectors/: BUILD.bazel
patched_prometheus/github.com/prometheus/client_golang/prometheus/collectors/version/: BUILD.bazel
patched_prometheus/github.com/prometheus/client_golang/prometheus/graphite/: BUILD.bazel
patched_prometheus/github.com/prometheus/client_golang/prometheus/internal/: BUILD.bazel
patched_prometheus/github.com/prometheus/client_golang/prometheus/promauto/: BUILD.bazel
patched_prometheus/github.com/prometheus/client_golang/prometheus/promhttp/: BUILD.bazel
patched_prometheus/github.com/prometheus/client_golang/prometheus/push/: BUILD.bazel
patched_prometheus/github.com/prometheus/client_golang/prometheus/testutil/: BUILD.bazel
patched_prometheus/github.com/prometheus/client_golang/prometheus/testutil/promlint/: BUILD.bazel
patched_prometheus/github.com/prometheus/client_golang/prometheus/testutil/promlint/validations/: BUILD.bazel
patches/: BUILD.bazel  secretmanager.patch
proto/: BUILD.bazel  backend-api.proto  generate_proto.sh
remote/: BUILD
repository/: BUILD.bazel  repository.go
temp_secretmanager/cloud.google.com/go/cloud.google.com/go/secretmanager@v1.14.1/apiv1/: BUILD.bazel
temp_secretmanager/cloud.google.com/go/cloud.google.com/go/secretmanager@v1.14.1/apiv1/secretmanagerpb/: BUILD.bazel
temp_secretmanager/cloud.google.com/go/cloud.google.com/go/secretmanager@v1.14.1/apiv1beta2/: BUILD.bazel
temp_secretmanager/cloud.google.com/go/cloud.google.com/go/secretmanager@v1.14.1/apiv1beta2/secretmanagerpb/: BUILD.bazel
temp_secretmanager/cloud.google.com/go/cloud.google.com/go/secretmanager@v1.14.1/internal/: BUILD.bazel
temp_secretmanager/cloud.google.com/go/secretmanager/: BUILD.bazel
temp_secretmanager/cloud.google.com/go/secretmanager/apiv1/: BUILD.bazel
temp_secretmanager/cloud.google.com/go/secretmanager/apiv1/secretmanagerpb/: BUILD.bazel
temp_secretmanager/cloud.google.com/go/secretmanager/apiv1beta2/: BUILD.bazel
temp_secretmanager/cloud.google.com/go/secretmanager/apiv1beta2/secretmanagerpb/: BUILD.bazel
temp_secretmanager/cloud.google.com/go/secretmanager/internal/: BUILD.bazel
