load("@rules_proto//proto:defs.bzl", "proto_library")
load("@rules_go//proto:def.bzl", "go_grpc_library", "go_proto_library")

proto_library(
    name = "api_proto",
    srcs = ["backend-api.proto"],
    visibility = ["//visibility:public"],
)

go_grpc_library(
    name = "api_go_proto",
    importpath = "backend-api",
    proto = ":api_proto",
    visibility = ["//visibility:public"],
)
