load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "api",
    srcs = ["client.go"],
    importpath = "github.com/backend-team/backend-api/patched_prometheus/github.com/prometheus/client_golang/api",
    visibility = ["//visibility:public"],
)

go_test(
    name = "api_test",
    srcs = ["client_test.go"],
    embed = [":api"],
)
