load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "prometheus",
    srcs = glob(["**/*.go"]),
    importpath = "github.com/backend-team/backend-api/patched_prometheus/github.com/prometheus/client_golang/prometheus",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_beorn7_perks//quantile",
        "@com_github_cespare_xxhash_v2//:xxhash",
        "@com_github_prometheus_client_golang//prometheus/internal",
        "@com_github_prometheus_client_model//go",
        "@com_github_prometheus_common//expfmt",
        "@com_github_prometheus_common//model",
        "@org_golang_google_protobuf//proto",
        "@org_golang_google_protobuf//types/known/timestamppb",
    ] + select({
        "@rules_go//go/platform:aix": [
            "@com_github_prometheus_procfs//:procfs",
        ],
        "@rules_go//go/platform:android": [
            "@com_github_prometheus_procfs//:procfs",
        ],
        "@rules_go//go/platform:darwin": [
            "@com_github_prometheus_procfs//:procfs",
        ],
        "@rules_go//go/platform:dragonfly": [
            "@com_github_prometheus_procfs//:procfs",
        ],
        "@rules_go//go/platform:freebsd": [
            "@com_github_prometheus_procfs//:procfs",
        ],
        "@rules_go//go/platform:illumos": [
            "@com_github_prometheus_procfs//:procfs",
        ],
        "@rules_go//go/platform:ios": [
            "@com_github_prometheus_procfs//:procfs",
        ],
        "@rules_go//go/platform:linux": [
            "@com_github_prometheus_procfs//:procfs",
        ],
        "@rules_go//go/platform:netbsd": [
            "@com_github_prometheus_procfs//:procfs",
        ],
        "@rules_go//go/platform:openbsd": [
            "@com_github_prometheus_procfs//:procfs",
        ],
        "@rules_go//go/platform:osx": [
            "@com_github_prometheus_procfs//:procfs",
        ],
        "@rules_go//go/platform:plan9": [
            "@com_github_prometheus_procfs//:procfs",
        ],
        "@rules_go//go/platform:qnx": [
            "@com_github_prometheus_procfs//:procfs",
        ],
        "@rules_go//go/platform:solaris": [
            "@com_github_prometheus_procfs//:procfs",
        ],
        "@rules_go//go/platform:windows": [
            "@org_golang_x_sys//windows",
        ],
        "//conditions:default": [],
    }),
)

go_test(
    name = "prometheus_test",
    srcs = [
        "benchmark_test.go",
        "collector_test.go",
        "counter_test.go",
        "desc_test.go",
        "example_clustermanager_test.go",
        "example_metricvec_test.go",
        "example_timer_complex_test.go",
        "example_timer_gauge_test.go",
        "example_timer_test.go",
        "examples_test.go",
        "expvar_collector_test.go",
        "gauge_test.go",
        "go_collector_go116_test.go",
        "go_collector_latest_test.go",
        "go_collector_metrics_go117_test.go",
        "go_collector_metrics_go118_test.go",
        "go_collector_metrics_go119_test.go",
        "go_collector_metrics_go120_test.go",
        "go_collector_metrics_go121_test.go",
        "go_collector_metrics_go122_test.go",
        "go_collector_test.go",
        "histogram_test.go",
        "metric_test.go",
        "process_collector_test.go",
        "process_collector_windows_test.go",
        "registry_test.go",
        "summary_test.go",
        "timer_test.go",
        "utils_test.go",
        "value_test.go",
        "vec_test.go",
        "wrap_test.go",
    ],
    embed = [":prometheus"],
    deps = [
        "@com_github_prometheus_client_golang//prometheus",
        "@com_github_prometheus_client_golang//prometheus/internal",
        "@com_github_prometheus_client_golang//prometheus/promhttp",
        "@com_github_prometheus_client_model//go",
        "@com_github_prometheus_common//expfmt",
        "@org_golang_google_protobuf//encoding/protojson",
        "@org_golang_google_protobuf//proto",
        "@org_golang_google_protobuf//types/known/timestamppb",
    ] + select({
        "@rules_go//go/platform:android": [
            "@com_github_prometheus_procfs//:procfs",
        ],
        "@rules_go//go/platform:linux": [
            "@com_github_prometheus_procfs//:procfs",
        ],
        "//conditions:default": [],
    }),
)
