load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "internal",
    srcs = ["version.go"],
    importpath = "github.com/backend-team/backend-api/temp_secretmanager/cloud.google.com/go/secretmanager/internal",
    visibility = ["//temp_secretmanager/cloud.google.com/go/secretmanager:__subpackages__"],
)
