load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "exemplars_lib",
    srcs = ["main.go"],
    importpath = "github.com/backend-team/backend-api/patched_prometheus/github.com/prometheus/client_golang/examples/exemplars",
    visibility = ["//visibility:private"],
    deps = [
        "@com_github_prometheus_client_golang//prometheus",
        "@com_github_prometheus_client_golang//prometheus/collectors",
        "@com_github_prometheus_client_golang//prometheus/promhttp",
    ],
)

go_binary(
    name = "exemplars",
    embed = [":exemplars_lib"],
    visibility = ["//visibility:public"],
)
