load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "versioncollector_lib",
    srcs = ["main.go"],
    importpath = "github.com/backend-team/backend-api/patched_prometheus/github.com/prometheus/client_golang/examples/versioncollector",
    visibility = ["//visibility:private"],
    deps = [
        "@com_github_prometheus_client_golang//prometheus",
        "@com_github_prometheus_client_golang//prometheus/collectors/version",
        "@com_github_prometheus_client_golang//prometheus/promhttp",
    ],
)

go_binary(
    name = "versioncollector",
    embed = [":versioncollector_lib"],
    visibility = ["//visibility:public"],
)
