load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "collectors",
    srcs = [
        "collectors.go",
        "dbstats_collector.go",
        "expvar_collector.go",
        "go_collector_go116.go",
        "go_collector_latest.go",
        "process_collector.go",
    ],
    importpath = "github.com/backend-team/backend-api/patched_prometheus/github.com/prometheus/client_golang/prometheus/collectors",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_prometheus_client_golang//prometheus",
        "@com_github_prometheus_client_golang//prometheus/internal",
    ],
)

go_test(
    name = "collectors_test",
    srcs = [
        "dbstats_collector_test.go",
        "go_collector_go117_test.go",
        "go_collector_go119_test.go",
        "go_collector_go120_test.go",
        "go_collector_go121_test.go",
        "go_collector_go122_test.go",
        "go_collector_latest_test.go",
    ],
    embed = [":collectors"],
    deps = [
        "@com_github_google_go_cmp//cmp",
        "@com_github_prometheus_client_golang//prometheus",
        "@com_github_prometheus_client_golang//prometheus/promhttp",
    ],
)
