load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "graphite",
    srcs = ["bridge.go"],
    importpath = "github.com/backend-team/backend-api/patched_prometheus/github.com/prometheus/client_golang/prometheus/graphite",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_prometheus_client_golang//prometheus",
        "@com_github_prometheus_client_model//go",
        "@com_github_prometheus_common//expfmt",
        "@com_github_prometheus_common//model",
    ],
)

go_test(
    name = "graphite_test",
    srcs = ["bridge_test.go"],
    embed = [":graphite"],
    deps = [
        "@com_github_prometheus_client_golang//prometheus",
        "@com_github_prometheus_common//model",
    ],
)
