load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "promauto",
    srcs = ["auto.go"],
    importpath = "github.com/backend-team/backend-api/patched_prometheus/github.com/prometheus/client_golang/prometheus/promauto",
    visibility = ["//visibility:public"],
    deps = ["@com_github_prometheus_client_golang//prometheus"],
)

go_test(
    name = "promauto_test",
    srcs = ["auto_test.go"],
    embed = [":promauto"],
    deps = ["@com_github_prometheus_client_golang//prometheus"],
)
