load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "internal",
    srcs = ["version.go"],
    importpath = "github.com/backend-team/backend-api/temp_secretmanager/cloud.google.com/go/cloud.google.com/go/secretmanager@v1.14.1/internal",
    visibility = ["//temp_secretmanager/cloud.google.com/go/cloud.google.com/go/secretmanager@v1.14.1:__subpackages__"],
)
