load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "validations",
    srcs = [
        "counter_validations.go",
        "duplicate_validations.go",
        "generic_name_validations.go",
        "help_validations.go",
        "histogram_validations.go",
        "units.go",
    ],
    importpath = "github.com/backend-team/backend-api/patched_prometheus/github.com/prometheus/client_golang/prometheus/testutil/promlint/validations",
    visibility = ["//visibility:public"],
    deps = ["@com_github_prometheus_client_model//go"],
)
