load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "httputil",
    srcs = ["negotiate.go"],
    importpath = "github.com/backend-team/backend-api/patched_prometheus/github.com/prometheus/client_golang/internal/github.com/golang/gddo/httputil",
    visibility = ["//patched_prometheus/github.com/prometheus/client_golang:__subpackages__"],
    deps = ["@com_github_prometheus_client_golang//internal/github.com/golang/gddo/httputil/header"],
)

go_test(
    name = "httputil_test",
    srcs = ["negotiate_test.go"],
    embed = [":httputil"],
)
