load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "header",
    srcs = ["header.go"],
    importpath = "github.com/backend-team/backend-api/patched_prometheus/github.com/prometheus/client_golang/internal/github.com/golang/gddo/httputil/header",
    visibility = ["//patched_prometheus/github.com/prometheus/client_golang:__subpackages__"],
)

go_test(
    name = "header_test",
    srcs = ["header_test.go"],
    embed = [":header"],
    deps = ["@com_github_google_go_cmp//cmp"],
)
